# zhukovgreen

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  artem_cl.md  artem_cv.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pdfstyle.css  pyproject.toml
docs/: artem_cv.md  brief_info.md  calendar.md  databricks-exp.md  downloads.md  free_time.md  index.md  tech_stack.md
scripts/: commit_updated_files.py
