[tool.black]
line-length=79
target-version=["py38"]

[tool.isort]
line_length = 79
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = true
multi_line_output = 3
known_third_party=["pytest", "yarl", "aiohttp", "aioredis", "envparse"]
# known_first_party=["aiohttp_cache"]

[tool.coverage.run]
branch = true
source = ["aiohttp_cache"]

[tool.coverage.paths]
source = ["aiohttp_cache/"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0.0rc1"
addopts = "-vv -s --cov --no-cov-on-fail --tb=native"
testpaths = "tests/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "| %(asctime)s | %(name)s | %(levelname)s | %(filename)s | %(message)s"
python_files = [
    "test_*.py",
    "unit_test_*.py",
    "component_test_*.py",
]

[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["ZhukovGreen <zhukovgreen@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygithub = "^1.46"
envparse = "^0.2.0"
gitpython = "^3.0.8"
mkdocs = "^1.0.4"
markdown-include = "^0.5.1"
mkdocs-material = "^4.6.3"
weasyprint = "^51"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
neovim = "^0.3.1"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
